--- a/index.html
+++ b/index.html
@@ -13,91 +13,69 @@
 </head>
 
 <body>
-    <div class="radio">
-        <span><input type="radio" checked name="mode" id="light">light mode</span>
-        <span><input type="radio" name="mode" id="dark">dark mode</span>
-    </div>
+    <main>
+        <div class="resume">
+            <div class="container">
+                <div class="resume__block">
+                    <h1 class="contact-info__header">Bulka</h1>
+                    <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+
+                    <div class="contact_info_container fh">
+                        <div class="contact-info__block">
+                            <a href="" rel="author" class="contact-info__item">
+                                <div class="contact-info__item-icon-wrapper">
+                                    <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 384 512">
+                                        <path
+                                            d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <span>Lviv, Ukraine</span>
+                            </a>
+                            <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author"
+                                class="contact-info__item">
+                                <div class="contact-info__item-icon-wrapper">
+                                    <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 448 512">
+                                        <path
+                                            d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <span>binary-studio</span>
+                            </a>
+                        </div>
+
+                        <div class="contact-info__block contact-info__block--center">
+                            <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
+                        </div>
+
+                        <div class="contact-info__block"></div>
+                        <div>
+                            <div>
+                                <div>
+                                </div>
+    </main>
     <div class="container">
-        <div class="main-content">
-            <div class="about-me">
-                <h1>Александр Рыбин</h1>
-            </div>
+        <div class="resume__block">
             <div class="intro">
-                <h3>Intro</h3>
-                <ul>
-                    <li>Я живу</li>
-                    <li>Мне нравится жить</li>
-                    <li>Хочу жить лучше, чем сейчас</li>
-                    <li>Жизнь важно прожить так, чтобы было что вспомнить на старости лет</li>
-                </ul>
-            </div>
-            <div class="contacts">
-                <h3>Contacts</h3>
-                <ul>
-                    <li>
-                        <span>г. Харьков</span>
-                    </li>
-                    <li>
-                        <span>Тел: </span>
-                        <a class="link" href="tel:+380983874705">+380983874705</a>
-                    </li>
-                    <li>
-                        <span>Telegram: </span>
-                        <a class="link" href="https://web.telegram.org/k/" target="_blank">https://t.me/Yazkede</a>
-                    </li>
-                    <li>
-                        <span>E-mail: </span>
-                        <a class="link" href="mailto:alex.rybin999@gmail.com">alex.rybin999@gmail.com</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="timeline">
-                <h3>Timeline</h3>
-                <ul>
-                    <li>1995 - окончил школу</li>
-                    <li>1999 - окончил Харьковский Машиностроительный колледж</li>
-                    <li>2005 - окончил НТУ "ХПИ"</li>
-                    <li>2005 - 2015 работал преимущественно в торговле и банковской сфере</li>
-                    <li>2015 - 2021 работал инженером-технологом на авиаремонтном заводе</li>
-                    <li>2021 - и вот я снова студент</li>
-                </ul>
-            </div>
-            <div class="realtime">
-                <h3>В настоящее время</h3>
-                <ul>
-                    <li>С января 2021 года изучаю HTML, CSS, JS по видеоурокам и учебникам</li>
-                    <li>Английский язык - изучаю на уровне A2/B1 в школе Green Forest</li>
-                </ul>
-            </div>
-            <div class="projects">
-                <h3>Мои работы</h3>
-                <ul>
-                    <li>Вёрстка лендинга на FLEX/GRID: <p><a class="bold" href="https://yazkede.github.io/FLEX-GRID/"
-                                target="_blank">https://yazkede.github.io/FLEX-GRID/</a>.........<span>[ HTML, SCSS, JS,
-                                Flex,
-                                Grid,
-                                Responsive ]</span>
-                        </p>
-                        Хотелось сверстать лендинг на Флексах и Гридах.
-                        Данный экземпляр по своей структуре, как мне кажется, оказался подходящим для выполнения этой
-                        цели.
-                    </li>
-                    <li>Программа учёта семейного бюджета и расходов: <p><a class="bold"
-                                href="https://yazkede.github.io/MyBudget/"
-                                target="_blank">https://yazkede.github.io/MyBudget/</a>
-                            .........<span>[ HTML, SCSS, JS, ООП, Responsive ]</span></p>
-                        Программа создавалась для домашнего использования. Помогает в понимании того, куда уходят все
-                        деньги и дисциплинирует в тратах.
-                    </li>
-                </ul>
-            </div>
-            <div class="purpose">
-                <h3>Цели на ближайшее будущее</h3>
-                <p>Планирую наконец-то начать изучение фреймворка React. Интересует реализация компонентного подхода, а
-                    так же хотелось бы научиться выстраивать грамотную файловую структуру. </p>
+                <div class="intro__icon-wrapper">
+                    <svg class="intro__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path
+                            d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z">
+                        </path>
+                    </svg>
+                </div>
+                <p class="intro_text">Meow.
+                    I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
+                    all I do is sleep and try to help out hoomans with their projects whenever
+                    they need me.
+                </p>
             </div>
         </div>
-        <script src="app.js"></script>
+    </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
