--- a/index.html
+++ b/index.html
@@ -17,11 +17,25 @@
         <div class="resume">
             <div class="container">
                 <div class="resume__block">
-                    <h1 class="contact-info__header">Bulka</h1>
-                    <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+                    <h1 class="contact-info__header">Oleksandr Rybin</h1>
+                    <h3 class="contact-info__sub-header">Frontend developer</h3>
                     <div class="contact_info_container fh">
                         <div class="contact-info__block">
-                            <a href="" rel="author" class="contact-info__item">
+
+
+                            <a href="#" rel="author" class="contact-info__item">
+                                <div class="contact-info__item-icon-wrapper">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="calendar"
+                                        class="contact-info__item-icon" role="img" xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 448 612">
+                                        <path fill="currentColor"
+                                            d="M12 192h424c6.6 0 12 5.4 12 12v260c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V204c0-6.6 5.4-12 12-12zm436-44v-36c0-26.5-21.5-48-48-48h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v36c0 6.6 5.4 12 12 12h424c6.6 0 12-5.4 12-12z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <span>42 y.o.</span>
+                            </a>
+                            <a href="#" rel="author" class="contact-info__item">
                                 <div class="contact-info__item-icon-wrapper">
                                     <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 384 512">
@@ -30,9 +44,9 @@
                                         </path>
                                     </svg>
                                 </div>
-                                <span>Lviv, Ukraine</span>
+                                <span>Kharkiv, Ukraine</span>
                             </a>
-                            <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author"
+                            <a href="https://www.linkedin.com/in/alexandr-rybin-2b69a9211/" rel="author"
                                 class="contact-info__item">
                                 <div class="contact-info__item-icon-wrapper">
                                     <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg"
@@ -42,13 +56,52 @@
                                         </path>
                                     </svg>
                                 </div>
-                                <span>binary-studio</span>
+                                <span>Oleksandr Rybin</span>
                             </a>
                         </div>
                         <div class="contact-info__block contact-info__block--center">
-                            <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
+                            <img class="contact-info__avatar" src="/assets/IMG519.jpg" alt="Avatar">
                         </div>
-                        <div class="contact-info__block"></div>
+                        <div class="contact-info__block">
+                            <a class="contact-info__item" href="mailto:alex.rybin999@gmail.com">
+                                <div class="contact-info__item-icon-wrapper">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas"
+                                        data-icon="envelope-open-text" class="contact-info__item-icon" role="img"
+                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                        <path fill="currentColor"
+                                            d="M176 216h160c8.84 0 16-7.16 16-16v-16c0-8.84-7.16-16-16-16H176c-8.84 0-16 7.16-16 16v16c0 8.84 7.16 16 16 16zm-16 80c0 8.84 7.16 16 16 16h160c8.84 0 16-7.16 16-16v-16c0-8.84-7.16-16-16-16H176c-8.84 0-16 7.16-16 16v16zm96 121.13c-16.42 0-32.84-5.06-46.86-15.19L0 250.86V464c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V250.86L302.86 401.94c-14.02 10.12-30.44 15.19-46.86 15.19zm237.61-254.18c-8.85-6.94-17.24-13.47-29.61-22.81V96c0-26.51-21.49-48-48-48h-77.55c-3.04-2.2-5.87-4.26-9.04-6.56C312.6 29.17 279.2-.35 256 0c-23.2-.35-56.59 29.17-73.41 41.44-3.17 2.3-6 4.36-9.04 6.56H96c-26.51 0-48 21.49-48 48v44.14c-12.37 9.33-20.76 15.87-29.61 22.81A47.995 47.995 0 0 0 0 200.72v10.65l96 69.35V96h320v184.72l96-69.35v-10.65c0-14.74-6.78-28.67-18.39-37.77z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <span>alex.rybin999@gmail.com</span>
+                            </a>
+
+                            <a class="contact-info__item" href="tel:+380983874705">
+                                <div class="contact-info__item-icon-wrapper">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas"
+                                        data-icon="phone-square-alt" class="contact-info__item-icon" role="img"
+                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                        <path fill="currentColor"
+                                            d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48zm-16.39 307.37l-15 65A15 15 0 0 1 354 416C194 416 64 286.29 64 126a15.7 15.7 0 0 1 11.63-14.61l65-15A18.23 18.23 0 0 1 144 96a16.27 16.27 0 0 1 13.79 9.09l30 70A17.9 17.9 0 0 1 189 181a17 17 0 0 1-5.5 11.61l-37.89 31a231.91 231.91 0 0 0 110.78 110.78l31-37.89A17 17 0 0 1 299 291a17.85 17.85 0 0 1 5.91 1.21l70 30A16.25 16.25 0 0 1 384 336a17.41 17.41 0 0 1-.39 3.37z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <span>+380983874705</span>
+                            </a>
+                            <a class="contact-info__item"
+                                href="https://www.facebook.com/profile.php?id=100009942045310">
+                                <div class="contact-info__item-icon-wrapper">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fab"
+                                        data-icon="facebook-square" class="contact-info__item-icon" role="img"
+                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                        <path fill="currentColor"
+                                            d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <span>Oleksandr Rybin</span>
+                            </a>
+                        </div>
                     </div>
                     <div class="intro">
                         <div class="intro__icon-wrapper">
@@ -63,6 +116,59 @@
                             all I do is sleep and try to help out hoomans with their projects whenever
                             they need me.
                         </p>
+                    </div>
+                    <div class="skills">
+                        <h3 class="skills__header">Skills</h3>
+                        <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
+                    </div>
+                    <div class="main-info fh">
+
+                        <div class="experiences">
+                            <div class="experiences">
+                                <h3 class="experiences__header">Experience</h3>
+                                <div class="experiences__company">
+                                    <div class="experiences__company-header">
+                                        <span class="experiences__company-header-durability">For whole my life</span>
+                                        <h3 class="experiences__company-header-name">BinaryStudio</h3>
+                                    </div>
+
+                                    <div class="experiences__company-project">
+                                        <span class="experiences__company-project-role">Binary Studio Cat</span>
+                                        <h3 class="experiences__company-project-name">Hooman project</h3>
+                                        <ul class="experiences__company-project-responsibilities">
+                                            <li>Supported hoomans</li>
+                                            <li>Slept all the time</li>
+                                            <li>Lied on the keyboard</li>
+                                            <li>Watched my hoomans working</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="additional-info fv">
+                            <div class="additional-info__education">
+                                <h3 class="additional-info__education-header">Education</h3>
+                                <div class="additional-info__education-university">
+                                    <span class="additional-info__education-university-durability">2021</span>
+                                    <h3 class="additional-info__education-university-speciality">Cat track</h3>
+                                    <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                                </div>
+                            </div>
+
+                            <div class="additional-info__languages">
+                                <h3 class="additional-info__languages-header">Languages</h3>
+                                <p class="additional-info__languages-item">
+                                    Meow dialect
+                                </p>
+                                <p class="additional-info__languages-item">
+                                    Ukrainian (understand)
+                                </p>
+                                <p class="additional-info__languages-item">
+                                    English (don't understand)
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
