--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+    <div class="radio">
+        <span><input type="radio" checked name="mode" id="light">light mode</span>
+        <span><input type="radio" name="mode" id="dark">dark mode</span>
+    </div>
     <main>
         <div class="resume">
             <div class="container">
@@ -21,8 +25,6 @@
                     <h3 class="contact-info__sub-header">Frontend developer</h3>
                     <div class="contact_info_container fh">
                         <div class="contact-info__block">
-
-
                             <a href="#" rel="author" class="contact-info__item">
                                 <div class="contact-info__item-icon-wrapper">
                                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="calendar"
@@ -73,7 +75,7 @@
                                         </path>
                                     </svg>
                                 </div>
-                                <span>alex.rybin999@gmail.com</span>
+                                <span>icantfree@gmail.com</span>
                             </a>
 
                             <a class="contact-info__item" href="tel:+380983874705">
@@ -103,6 +105,7 @@
                             </a>
                         </div>
                     </div>
+                    <hr>
                     <div class="intro">
                         <div class="intro__icon-wrapper">
                             <svg class="intro__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -111,16 +114,17 @@
                                 </path>
                             </svg>
                         </div>
-                        <p class="intro_text">Meow.
-                            I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
-                            all I do is sleep and try to help out hoomans with their projects whenever
-                            they need me.
+                        <p class="intro_text">I am studying the frontend. Most of all, I like the visual component, when
+                            you do something and you can immediately see how the picture changes in real time. The most
+                            important thing for me is to do what I love.
                         </p>
                     </div>
+                    <hr>
                     <div class="skills">
                         <h3 class="skills__header">Skills</h3>
-                        <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
+                        <p class="skills__text">Html, css, js(basic), git</p>
                     </div>
+                    <hr>
                     <div class="main-info fh">
 
                         <div class="experiences">
@@ -128,18 +132,29 @@
                                 <h3 class="experiences__header">Experience</h3>
                                 <div class="experiences__company">
                                     <div class="experiences__company-header">
-                                        <span class="experiences__company-header-durability">For whole my life</span>
-                                        <h3 class="experiences__company-header-name">BinaryStudio</h3>
+                                        <span class="experiences__company-header-durability">Since January 2021 I have
+                                            been studying HTML, CSS, JS with video tutorials and books</span>
+                                        <h3 class="experiences__company-header-name"></h3>
                                     </div>
 
                                     <div class="experiences__company-project">
-                                        <span class="experiences__company-project-role">Binary Studio Cat</span>
-                                        <h3 class="experiences__company-project-name">Hooman project</h3>
+                                        <span class="experiences__company-project-role"></span>
+                                        <h3 class="experiences__company-project-name">My works</h3>
                                         <ul class="experiences__company-project-responsibilities">
-                                            <li>Supported hoomans</li>
-                                            <li>Slept all the time</li>
-                                            <li>Lied on the keyboard</li>
-                                            <li>Watched my hoomans working</li>
+                                            <li>Вёрстка лендинга на FLEX/GRID: <p><a class="bold"
+                                                        href="https://yazkede.github.io/FLEX-GRID/"
+                                                        target="_blank">https://yazkede.github.io/FLEX-GRID/</a>.........<span>[
+                                                        HTML, SCSS, JS,
+                                                        Flex,
+                                                        Grid,
+                                                        Responsive ]</span>
+                                                </p>
+                                            </li>
+                                            <li>Программа учёта семейного бюджета и расходов: <p><a class="bold"
+                                                        href="https://yazkede.github.io/MyBudget/"
+                                                        target="_blank">https://yazkede.github.io/MyBudget/</a>
+                                                    .........<span>[ HTML, SCSS, JS, ООП, Responsive ]</span></p>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -150,22 +165,24 @@
                             <div class="additional-info__education">
                                 <h3 class="additional-info__education-header">Education</h3>
                                 <div class="additional-info__education-university">
-                                    <span class="additional-info__education-university-durability">2021</span>
-                                    <h3 class="additional-info__education-university-speciality">Cat track</h3>
-                                    <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                                    <span class="additional-info__education-university-durability">2005</span>
+                                    <h3 class="additional-info__education-university-speciality">Economic cybernetics
+                                    </h3>
+                                    <p class="additional-info__education-university-name">National Technical University
+                                        "Kharkiv Polytechnic Institute"</p>
                                 </div>
                             </div>
 
                             <div class="additional-info__languages">
                                 <h3 class="additional-info__languages-header">Languages</h3>
                                 <p class="additional-info__languages-item">
-                                    Meow dialect
+                                    Russian (native)
                                 </p>
                                 <p class="additional-info__languages-item">
-                                    Ukrainian (understand)
+                                    Ukrainian (good)
                                 </p>
                                 <p class="additional-info__languages-item">
-                                    English (don't understand)
+                                    English (now I study at the A2/B1 )
                                 </p>
                             </div>
                         </div>
