--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                         <span class="experiences__company-project-role"></span>
                                         <h3 class="experiences__company-project-name">My works</h3>
                                         <ul class="experiences__company-project-responsibilities">
-                                            <li>Вёрстка лендинга на FLEX/GRID: <p><a class="bold"
+                                            <li>Layout of the landing page with FLEX/GRID: <p><a class="bold"
                                                         href="https://yazkede.github.io/FLEX-GRID/"
                                                         target="_blank">https://yazkede.github.io/FLEX-GRID/</a>.........<span>[
                                                         HTML, SCSS, JS,
@@ -151,10 +151,10 @@
                                                         Responsive ]</span>
                                                 </p>
                                             </li>
-                                            <li>Программа учёта семейного бюджета и расходов: <p><a class="bold"
+                                            <li>Family budget and expense tracking software: <p><a class="bold"
                                                         href="https://yazkede.github.io/MyBudget/"
                                                         target="_blank">https://yazkede.github.io/MyBudget/</a>
-                                                    .........<span>[ HTML, SCSS, JS, ООП, Responsive ]</span></p>
+                                                    .........<span>[ HTML, SCSS, JS, OOP, Responsive ]</span></p>
                                             </li>
                                         </ul>
                                     </div>
