--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My resume</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -138,7 +138,6 @@
                                     <div class="experiences__company-header">
                                         <span class="experiences__company-header-durability">Since January 2021 I have
                                             been studying HTML, CSS, JS with video tutorials and books</span>
-                                        <h3 class="experiences__company-header-name"></h3>
                                     </div>
 
                                     <div class="experiences__company-project">
