--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 </div>
                                 <span>Kharkiv, Ukraine</span>
                             </a>
-                            <a href="https://www.linkedin.com/in/alexandr-rybin-2b69a9211/" rel="author"
+                            <a href="https://www.linkedin.com/in/alexandr-rybin-2b69a9211/" rel="author" target="_blank"
                                 class="contact-info__item">
                                 <div class="contact-info__item-icon-wrapper">
                                     <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg"
@@ -65,7 +65,7 @@
                             </a>
                         </div>
                         <div class="contact-info__block contact-info__block--center">
-                            <img class="contact-info__avatar" src="../assets/IMG519.jpg" alt="Avatar">
+                            <img class="contact-info__avatar" src="/assets/ava.jpg" alt="Avatar">
                         </div>
 
                         <div class="contact-info__block">
@@ -94,7 +94,7 @@
                                 </div>
                                 <span>+380983874705</span>
                             </a>
-                            <a class="contact-info__item"
+                            <a class="contact-info__item" target="_blank"
                                 href="https://www.facebook.com/profile.php?id=100009942045310">
                                 <div class="contact-info__item-icon-wrapper">
                                     <svg aria-hidden="true" focusable="false" data-prefix="fab"
