--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             </a>
                         </div>
                         <div class="contact-info__block contact-info__block--center">
-                            <img class="contact-info__avatar" src="/assets/ava.jpg" alt="Avatar">
+                            <img class="contact-info__avatar" src="assets/ava.jpg" alt="Avatar">
                         </div>
 
                         <div class="contact-info__block">
